<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_play"
        android:title="@string/action_play"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_rename"
        android:title="@string/action_rename"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_move_to_sdcard"
        android:title="@string/action_move_to_sdcard"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_detail"
        android:title="@string/action_detail"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>